bk_ida/gccida/g1/recog
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48796:4: error: expected ';' after expression
rtx op; // [rsp+0h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48796:5: error: use of undeclared identifier 'op'
rtx op; // [rsp+0h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48797:4: error: expected ';' after expression
rtx opa; // [rsp+0h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48797:5: error: use of undeclared identifier 'opa'
rtx opa; // [rsp+0h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48798:4: error: expected ';' after expression
rtx opb; // [rsp+0h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48798:5: error: use of undeclared identifier 'opb'
rtx opb; // [rsp+0h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48799:4: error: expected ';' after expression
rtx opc; // [rsp+0h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48799:5: error: use of undeclared identifier 'opc'
rtx opc; // [rsp+0h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48802:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.insn = 0LL; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48806:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)x0->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48822:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v528; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48827:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v528; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48841:35: error: expected expression
if ( !register_operand( *( ( rtx *)v7 + 1), QImode) ) 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48843:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v53; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48851:35: error: expected expression
if ( !register_operand( *( ( rtx *)v7 + 2), QImode) ) 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48856:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v54; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48856:33: error: expected ';' after expression
recog_data_0.operand[1] = ( rtx)v54; 
                                ^
                                ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48857:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v98.rtwint = ( __int64)x0->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/insn-recog.c:48865:28: error: expected expression
if ( !rtx_equal_p( *( rtx *)( v99 + 8), ( rtx)v54) ) 
                           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog/src/obj/insn-recog.o] Error 1
